fix: image overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,7 @@ a {
   max-width: 1400px;
   margin: auto;
   width: 100%;
+  overflow-x: hidden;
 }
 .layout {
   padding: 10px;
@@ -90,3 +91,18 @@ a {
   background-color: #f02d34;
 }
 
+
+@media screen and (max-width: 800px) {
+  .hero-banner-image {
+    width: 77%;
+    height: 62%;
+    top: -2%;
+    right: -6%;
+  }
+  .footer-banner-image {
+    width: 77%;
+    left: 30%;
+    top: 6%;
+    height: 56%;
+  }
+}
